--- a/www/index.html
+++ b/www/index.html
@@ -37,9 +37,12 @@
     </head>
     <body>
     <h1>Shapes Game</h1> 
-    <h4>Square</h4>h4>
+    <h4>Square</h4>
     <p> A shape with 4 sides of the same lenght and 4 right angles.</p>
-    <div add id="square"
+    <div add id="square">
+    </div> <h4>Circle</h4>
+    <p>A shape with an edge equidistant from a center point.</p>
+    <div id="circle">
     </div>
 
         <script type="text/javascript" src="cordova.js"></script>
